@@ -1,5 +1,7 @@
 Changes file for DateTime::Incomplete
 
+- fixed "strftime" of incomplete datetimes
+
 0.00_07  2003-07-25
 - set_time_zone / set_locale test for undef args
 - strftime
